--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=gifti-backend
+spring.datasource.url=jdbc:mysql://${DB_URL}/gifti?serverTimezone=UTC&characterEncoding=UTF-8
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.database=mysql
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
